--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "prod": "pm2-runtime start server.js -i --exp-backoff-restart-delay-100"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
+    "pm2": "^5.3.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
