--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
+    "framer-motion": "^11.0.28",
     "jwt-decode": "^4.0.0",
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^5.0.6",
