--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "framer-motion": "^11.0.28",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
