--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,17 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "framer-motion": "^11.0.28",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^5.0.6",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
