--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^5.0.6",
+    "polished": "^4.3.1",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -28,7 +29,9 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.10.7",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
